--- a/Project/gradient.css
+++ b/Project/gradient.css
@@ -17,3 +17,7 @@
 .gradient5{
     background: linear-gradient(180deg, rgba(84, 84, 212, 0.20) 0%, rgba(84, 84, 212, 0.08) 100%);
 }
+
+.gradientres{
+    background: linear-gradient(180deg, rgba(251, 168, 28, 0.26) 0%, rgba(224, 86, 136, 0.15) 100%);
+}
