--- a/Project/gradient.css
+++ b/Project/gradient.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito+Sans:opsz@6..12&display=swap');
+
+/* body{
+    font-family:Nunito Sans !important;
+} */
+
 .gradient1{
     background:linear-gradient(180deg, rgba(84, 84, 212, 0.27) 0%, rgba(84, 84, 212, 0.11) 100%);
 }
