--- a/Project/output.css
+++ b/Project/output.css
@@ -554,6 +554,10 @@ video {
   bottom: 11.68px;
 }
 
+.left-\[-10px\] {
+  left: -10px;
+}
+
 .left-\[-193px\] {
   left: -193px;
 }
@@ -564,10 +568,6 @@ video {
 
 .left-\[101px\] {
   left: 101px;
-}
-
-.left-\[1275px\] {
-  left: 1275px;
 }
 
 .left-\[17px\] {
@@ -590,12 +590,8 @@ video {
   left: 565px;
 }
 
-.left-\[614px\] {
-  left: 614px;
-}
-
-.left-\[652px\] {
-  left: 652px;
+.left-\[9px\] {
+  left: 9px;
 }
 
 .right-\[-20px\] {
@@ -606,12 +602,8 @@ video {
   right: -283px;
 }
 
-.right-\[-68px\] {
-  right: -68px;
-}
-
-.right-\[107px\] {
-  right: 107px;
+.right-\[0px\] {
+  right: 0px;
 }
 
 .right-\[10px\] {
@@ -622,12 +614,40 @@ video {
   right: 120px;
 }
 
+.right-\[29px\] {
+  right: 29px;
+}
+
+.right-\[3px\] {
+  right: 3px;
+}
+
+.right-\[41px\] {
+  right: 41px;
+}
+
 .right-\[43px\] {
   right: 43px;
 }
 
+.right-\[50px\] {
+  right: 50px;
+}
+
+.right-\[513px\] {
+  right: 513px;
+}
+
+.right-\[598px\] {
+  right: 598px;
+}
+
 .top-\[-110px\] {
   top: -110px;
+}
+
+.top-\[-55px\] {
+  top: -55px;
 }
 
 .top-\[-75px\] {
@@ -636,6 +656,10 @@ video {
 
 .top-\[10px\] {
   top: 10px;
+}
+
+.top-\[12px\] {
+  top: 12px;
 }
 
 .top-\[1378px\] {
@@ -662,6 +686,22 @@ video {
   top: 35px;
 }
 
+.top-\[388px\] {
+  top: 388px;
+}
+
+.top-\[400px\] {
+  top: 400px;
+}
+
+.top-\[40px\] {
+  top: 40px;
+}
+
+.top-\[500px\] {
+  top: 500px;
+}
+
 .top-\[586px\] {
   top: 586px;
 }
@@ -674,12 +714,16 @@ video {
   top: 633px;
 }
 
-.top-\[710px\] {
-  top: 710px;
+.top-\[65px\] {
+  top: 65px;
 }
 
-.top-\[716px\] {
-  top: 716px;
+.top-\[675px\] {
+  top: 675px;
+}
+
+.top-\[730px\] {
+  top: 730px;
 }
 
 .top-\[87px\] {
@@ -688,246 +732,6 @@ video {
 
 .top-\[92px\] {
   top: 92px;
-}
-
-.top-\[12px\] {
-  top: 12px;
-}
-
-.right-\[29px\] {
-  right: 29px;
-}
-
-.left-\[9px\] {
-  left: 9px;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.right-\[\] {
-  right: ;
-}
-
-.right-\[px\] {
-  right: px;
-}
-
-.right-\[100px\] {
-  right: 100px;
-}
-
-.right-\[12px\] {
-  right: 12px;
-}
-
-.right-\[5px\] {
-  right: 5px;
-}
-
-.right-\[3px\] {
-  right: 3px;
-}
-
-.right-\[300px\] {
-  right: 300px;
-}
-
-.top-\[200px\] {
-  top: 200px;
-}
-
-.top-\[20px\] {
-  top: 20px;
-}
-
-.right-\[699px\] {
-  right: 699px;
-}
-
-.right-\[399px\] {
-  right: 399px;
-}
-
-.right-\[370px\] {
-  right: 370px;
-}
-
-.right-\[400px\] {
-  right: 400px;
-}
-
-.right-\[500px\] {
-  right: 500px;
-}
-
-.right-\[513px\] {
-  right: 513px;
-}
-
-.right-\[516px\] {
-  right: 516px;
-}
-
-.right-\[418px\] {
-  right: 418px;
-}
-
-.right-\[318px\] {
-  right: 318px;
-}
-
-.top-\[300px\] {
-  top: 300px;
-}
-
-.top-\[675px\] {
-  top: 675px;
-}
-
-.right-\[598px\] {
-  right: 598px;
-}
-
-.right-\[2px\] {
-  right: 2px;
-}
-
-.top-\[400px\] {
-  top: 400px;
-}
-
-.top-\[730px\] {
-  top: 730px;
-}
-
-.right-\[0px\] {
-  right: 0px;
-}
-
-.right-\[20px\] {
-  right: 20px;
-}
-
-.right-\[24px\] {
-  right: 24px;
-}
-
-.right-\[41px\] {
-  right: 41px;
-}
-
-.top-\[40px\] {
-  top: 40px;
-}
-
-.left-\[513px\] {
-  left: 513px;
-}
-
-.top-\[50px\] {
-  top: 50px;
-}
-
-.top-\[60px\] {
-  top: 60px;
-}
-
-.top-\[65px\] {
-  top: 65px;
-}
-
-.right-\[3opx\] {
-  right: 3opx;
-}
-
-.right-\[30px\] {
-  right: 30px;
-}
-
-.top-\[385px\] {
-  top: 385px;
-}
-
-.top-\[390px\] {
-  top: 390px;
-}
-
-.top-\[393px\] {
-  top: 393px;
-}
-
-.right-\[35px\] {
-  right: 35px;
-}
-
-.right-\[40px\] {
-  right: 40px;
-}
-
-.right-\[50px\] {
-  right: 50px;
-}
-
-.top-\[388px\] {
-  top: 388px;
-}
-
-.top-\[2px\] {
-  top: 2px;
-}
-
-.top-\[3px\] {
-  top: 3px;
-}
-
-.top-\[5px\] {
-  top: 5px;
-}
-
-.left-\[10px\] {
-  left: 10px;
-}
-
-.left-\[3px\] {
-  left: 3px;
-}
-
-.top-\[100px\] {
-  top: 100px;
-}
-
-.top-\[-10px\] {
-  top: -10px;
-}
-
-.top-\[-30px\] {
-  top: -30px;
-}
-
-.top-\[-40px\] {
-  top: -40px;
-}
-
-.top-\[-50px\] {
-  top: -50px;
-}
-
-.top-\[-60px\] {
-  top: -60px;
-}
-
-.top-\[-55px\] {
-  top: -55px;
-}
-
-.left-\[-10px\] {
-  left: -10px;
-}
-
-.top-\[500px\] {
-  top: 500px;
 }
 
 .mx-auto {
@@ -945,6 +749,10 @@ video {
 
 .mb-\[24px\] {
   margin-bottom: 24px;
+}
+
+.mb-\[40px\] {
+  margin-bottom: 40px;
 }
 
 .mb-\[50px\] {
@@ -979,22 +787,6 @@ video {
   margin-top: 58px;
 }
 
-.mt-\[92px\] {
-  margin-top: 92px;
-}
-
-.mt-\[72px\] {
-  margin-top: 72px;
-}
-
-.mb-\[30px\] {
-  margin-bottom: 30px;
-}
-
-.mb-\[40px\] {
-  margin-bottom: 40px;
-}
-
 .flex {
   display: flex;
 }
@@ -1025,10 +817,6 @@ video {
 
 .h-\[2576\.87px\] {
   height: 2576.87px;
-}
-
-.h-\[28px\] {
-  height: 28px;
 }
 
 .h-\[300px\] {
@@ -1063,6 +851,10 @@ video {
   height: 44px;
 }
 
+.h-\[472px\] {
+  height: 472px;
+}
+
 .h-\[506px\] {
   height: 506px;
 }
@@ -1079,8 +871,16 @@ video {
   height: 60px;
 }
 
+.h-\[644\.721px\] {
+  height: 644.721px;
+}
+
 .h-\[652\.853px\] {
   height: 652.853px;
+}
+
+.h-\[666\.74px\] {
+  height: 666.74px;
 }
 
 .h-\[69px\] {
@@ -1095,16 +895,8 @@ video {
   height: 780px;
 }
 
-.h-\[472px\] {
-  height: 472px;
-}
-
-.h-\[666\.74px\] {
-  height: 666.74px;
-}
-
-.h-\[644\.721px\] {
-  height: 644.721px;
+.w-\[116px\] {
+  width: 116px;
 }
 
 .w-\[141px\] {
@@ -1113,6 +905,10 @@ video {
 
 .w-\[157px\] {
   width: 157px;
+}
+
+.w-\[185px\] {
+  width: 185px;
 }
 
 .w-\[201px\] {
@@ -1151,28 +947,8 @@ video {
   width: 69px;
 }
 
-.w-\[95px\] {
-  width: 95px;
-}
-
 .w-full {
   width: 100%;
-}
-
-.w-\[116px\] {
-  width: 116px;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[185px\] {
-  width: 185px;
-}
-
-.w-\[780px\] {
-  width: 780px;
 }
 
 .max-w-\[1200px\] {
@@ -1211,6 +987,14 @@ video {
   max-width: 210px;
 }
 
+.max-w-\[215\.168px\] {
+  max-width: 215.168px;
+}
+
+.max-w-\[252\.366px\] {
+  max-width: 252.366px;
+}
+
 .max-w-\[269px\] {
   max-width: 269px;
 }
@@ -1239,8 +1023,16 @@ video {
   max-width: 467px;
 }
 
-.max-w-\[588px\] {
-  max-width: 588px;
+.max-w-\[527px\] {
+  max-width: 527px;
+}
+
+.max-w-\[572px\] {
+  max-width: 572px;
+}
+
+.max-w-\[585px\] {
+  max-width: 585px;
 }
 
 .max-w-\[599\.578px\] {
@@ -1259,32 +1051,13 @@ video {
   max-width: 860.002px;
 }
 
-.max-w-\[585px\] {
-  max-width: 585px;
-}
-
-.max-w-\[527px\] {
-  max-width: 527px;
-}
-
-.max-w-\[472\] {
-  max-width: 472;
-}
-
-.max-w-\[572px\] {
-  max-width: 572px;
-}
-
-.max-w-\[252\.366px\] {
-  max-width: 252.366px;
-}
-
-.max-w-\[215\.168px\] {
-  max-width: 215.168px;
-}
-
 .rotate-\[-31\.418deg\] {
   --tw-rotate: -31.418deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[-41\.342deg\] {
+  --tw-rotate: -41.342deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1298,23 +1071,13 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.rotate-\[65\.712deg\] {
-  --tw-rotate: 65.712deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-\[\] {
-  --tw-rotate: ;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-\[-41\.342deg\] {
-  --tw-rotate: -41.342deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .rotate-\[44\.85deg\] {
   --tw-rotate: 44.85deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[65\.712deg\] {
+  --tw-rotate: 65.712deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1407,10 +1170,6 @@ video {
   border-radius: 5px;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
 .border-\[1px\] {
   border-width: 1px;
 }
@@ -1455,16 +1214,6 @@ video {
   background-color: rgba(255, 255, 255, 0.20);
 }
 
-.bg-yellow-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 252 232 / var(--tw-bg-opacity));
-}
-
-.bg-\[red\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 0 0 / var(--tw-bg-opacity));
-}
-
 .text-center {
   text-align: center;
 }
@@ -1473,16 +1222,12 @@ video {
   text-align: right;
 }
 
+.font-graphik-bold {
+  font-family: GraphikBold, sans-serif;
+}
+
 .font-montserrat {
   font-family: Montserrat, sans-serif;
-}
-
-.font-nunito-sans {
-  font-family: "Nunito Sans", sans-serif;
-}
-
-.font-graphik {
-  font-family: Graphik, sans-serif;
 }
 
 .text-\[16px\] {
@@ -1505,16 +1250,8 @@ video {
   font-size: 28px;
 }
 
-.text-\[19px\] {
-  font-size: 19px;
-}
-
 .font-bold {
   font-weight: 700;
-}
-
-.font-extrabold {
-  font-weight: 800;
 }
 
 .font-medium {
@@ -1586,9 +1323,9 @@ video {
 }
 
 @font-face {
-  font-family: "Graphik";
+  font-family: "GraphikBold";
 
-  src: url("../Project/assets/GraphikRegular.otf");
+  src: url("../Project/assets/GraphikBold.otf");
 }
 
 .hover\:bg-\[gray\]:hover {
@@ -1618,18 +1355,6 @@ video {
 
   .sm\:left-\[144px\] {
     left: 144px;
-  }
-
-  .sm\:left-\[9px\] {
-    left: 9px;
-  }
-
-  .sm\:right-\[29px\] {
-    right: 29px;
-  }
-
-  .sm\:top-\[12px\] {
-    top: 12px;
   }
 
   .sm\:top-\[72px\] {
