--- a/src/input.css
+++ b/src/input.css
@@ -1,9 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito+Sans:opsz@6..12&display=swap');
+
 @font-face {
-    font-family: "Graphik";
-    src: url("../Project/assets/GraphikRegular.otf");
+    font-family: "GraphikBold";
+    src: url("../Project/assets/GraphikBold.otf");
 }
 
