--- a/Project/output.css
+++ b/Project/output.css
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: "GraphikBold";
-  src: url("../Project/assets/GraphikBold.otf");
+  src: url("./assets/GraphikBold.otf");
 }
 
 *,
